--- a/index.html
+++ b/index.html
@@ -5,16 +5,5 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Document</title>
   </head>
-  <body>
-    <div id="result"></div>
-
-    <script>
-      let s = 0;
-
-      for (i = 1; i <= 100; i++) {
-        s = s + i;
-        console.log(s);
-      }
-    </script>
-  </body>
+  <body></body>
 </html>
